--- a/yard/skills/66-go/quick-start/src/restful/supervisord.conf
+++ b/yard/skills/66-go/quick-start/src/restful/supervisord.conf
@@ -38,4 +38,12 @@ history_file=~/.sv_history
 command=make start-restful-beego
 stdout_logfile=/tmp/quick-start/restful-beego.log
 redirect_stderr=true
+stopasgroup=true
+priority=8628
+
+[program:restful-gin]
+command=make start-restful-gin
+stdout_logfile=/tmp/quick-start/restful-gin.log
+redirect_stderr=true
+stopasgroup=true
 priority=8628
