--- a/yard/skills/66-go/quick-start/scripts/supervisord.conf
+++ b/yard/skills/66-go/quick-start/scripts/supervisord.conf
@@ -47,3 +47,10 @@ stdout_logfile=/tmp/quick-start/restful-gin.log
 redirect_stderr=true
 stopasgroup=true
 priority=8628
+
+[program:web-iris]
+command=make start-web-iris
+stdout_logfile=/tmp/quick-start/web-iris.log
+redirect_stderr=true
+stopasgroup=true
+priority=8628
