--- a/yard/skills/66-go/quick-start/scripts/Makefile
+++ b/yard/skills/66-go/quick-start/scripts/Makefile
@@ -32,6 +32,7 @@ start-client:
 # Test AREA
 # ####################################
 include ./mk/test-restful.mk
+include ./mk/test-web.mk
 
 
 # ####################################
@@ -41,6 +42,8 @@ start-restful-beego:
 	go run $(SRC_DIR)/restful/beego/main.go
 start-restful-gin:
 	go run $(SRC_DIR)/restful/gin/main.go
+start-web-iris:
+	cd $(SRC_DIR)/web/iris && go run main.go
 
 
 # ####################################
