--- a/yard/skills/66-go/quick-start/scripts/supervisord.conf
+++ b/yard/skills/66-go/quick-start/scripts/supervisord.conf
@@ -48,6 +48,13 @@ redirect_stderr=true
 stopasgroup=true
 priority=8628
 
+[program:restful-iris]
+command=make start-restful-iris
+stdout_logfile=/tmp/quick-start/restful-iris.log
+redirect_stderr=true
+stopasgroup=true
+priority=8628
+
 [program:web-iris]
 command=make start-web-iris
 stdout_logfile=/tmp/quick-start/web-iris.log
