--- a/yard/skills/66-go/quick-start/scripts/supervisord.conf
+++ b/yard/skills/66-go/quick-start/scripts/supervisord.conf
@@ -55,9 +55,9 @@ redirect_stderr=true
 stopasgroup=true
 priority=8628
 
-[program:web-iris]
-command=make start-web-iris
-stdout_logfile=/tmp/quick-start/web-iris.log
+[program:web-mini-iris]
+command=make start-web-mini-iris
+stdout_logfile=/tmp/quick-start/web-mini-iris.log
 redirect_stderr=true
 stopasgroup=true
 priority=8628
