--- a/yard/skills/66-go/quick-start/scripts/supervisord.conf
+++ b/yard/skills/66-go/quick-start/scripts/supervisord.conf
@@ -34,6 +34,9 @@ history_file=~/.sv_history
 ;[include]
 ;files = *.ini
 
+;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;
+;; RESTful
+;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;
 [program:restful-beego]
 command=make start-restful-beego
 stdout_logfile=/tmp/quick-start/restful-beego.log
@@ -55,9 +58,43 @@ redirect_stderr=true
 stopasgroup=true
 priority=8628
 
+[group:restful]
+programs=restful-beego,restful-gin,restful-iris
+priority=999
+
+
+;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;
+;; web-mini
+;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;
 [program:web-mini-iris]
 command=make start-web-mini-iris
 stdout_logfile=/tmp/quick-start/web-mini-iris.log
 redirect_stderr=true
 stopasgroup=true
 priority=8628
+
+[group:web-mini]
+programs=web-mini-iris
+priority=999
+
+
+;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;
+;; web-gen
+;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;
+[program:beego-api]
+command=make start-web-gen-beego-api
+stdout_logfile=/tmp/quick-start/beego-api.log
+redirect_stderr=true
+stopasgroup=true
+priority=8628
+
+[program:beego-new]
+command=make start-web-gen-beego-new
+stdout_logfile=/tmp/quick-start/beego-new.log
+redirect_stderr=true
+stopasgroup=true
+priority=8628
+
+[group:web-gen]
+programs=beego-api,beego-new
+priority=999
