--- a/yard/skills/66-go/quick-start/scripts/Makefile
+++ b/yard/skills/66-go/quick-start/scripts/Makefile
@@ -31,22 +31,16 @@ start-client:
 # ####################################
 # Test AREA
 # ####################################
-include ./mk/test-restful.mk
-include ./mk/test-web-mini.mk
+include ./mk/restful.mk
+include ./mk/web-mini.mk
+include ./mk/web-mvc.mk
+include ./mk/web-gen.mk
 
 
 # ####################################
 # supervisor 托管区域
 # ####################################
-start-restful-beego:
-	go run $(SRC_DIR)/restful/beego/main.go
-start-restful-gin:
-	go run $(SRC_DIR)/restful/gin/main.go
-start-restful-iris:
-	go run $(SRC_DIR)/restful/iris/main.go
-
-start-web-mini-iris:
-	cd $(SRC_DIR)/web-mini/iris && go run main.go
+# 分散在各个mk中
 
 
 # ####################################
