--- a/yard/skills/07-mysql/Makefile
+++ b/yard/skills/07-mysql/Makefile
@@ -17,6 +17,9 @@ DB_USER := root
 DB_PASSWD := passwd
 
 DB_CMD_CREATE := CREATE DATABASE IF NOT EXISTS ${DB_NAME} DEFAULT CHARACTER SET utf8mb4 COLLATE utf8mb4_unicode_ci;
+DB_CMD_IMPORT_OPT := --default-character-set=utf8
+DB_CMD_DUMP_OPT := --skip-dump-date --skip-extended-insert --default-character-set=utf8
+BACKUP_DIR := .backup
 
 
 # ####################################
@@ -42,12 +45,16 @@ init: init-db init-deps
 init-db:
 	make -C .open-helper/mysql sh CMD='mysql -u${DB_USER} -p${DB_PASSWD} -se"${DB_CMD_CREATE}"'
 	make -C .open-helper/mysql sh CMD='mysql -u${DB_USER} -p${DB_PASSWD} -se"show databases;"'
-	make -C .open-helper/mysql exec CMD='mysql -u${DB_USER} -p${DB_PASSWD} -D${DB_NAME} < ./stub/init.sql'
+	make -C .open-helper/mysql exec CMD='mysql -u${DB_USER} -p${DB_PASSWD} ${DB_CMD_IMPORT_OPT} -D${DB_NAME} < ./stub/init.sql'
 init-deps:
 	cd node && cnpm i
 
 do-test:
 	cd node && node hallo-mysql.js
+
+export:
+	[ -d "${BACKUP_DIR}" ] || mkdir -p "${BACKUP_DIR}"
+	make -C .open-helper/mysql exec CMD='mysqldump -u${DB_USER} -p${DB_PASSWD} ${DB_CMD_DUMP_OPT} ${DB_NAME} > ../../${BACKUP_DIR}/db-${DB_NAME}-${DATA_SUF}.sql'
 
 
 # ####################################
